fix front and back